--- a/kickers/app/src/main/AndroidManifest.xml
+++ b/kickers/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.performgroup.innovation.kickers">
 
+    <uses-permission android:name="android.permission.VIBRATE"/>
+
     <application
         android:name=".application.KickersApplication"
         android:icon="@drawable/ic_launcher"
