--- a/kickers/app/build.gradle
+++ b/kickers/app/build.gradle
@@ -26,5 +26,6 @@ dependencies {
     compile 'com.squareup:otto:1.3.4'
     compile 'com.squareup.dagger:dagger:1.2.1'
     compile 'com.squareup.dagger:dagger-compiler:1.2.1'
+    compile 'com.google.code.gson:gson:2.3'
     compile project(':KickersCore')
 }
