--- a/kickers/app/src/main/AndroidManifest.xml
+++ b/kickers/app/src/main/AndroidManifest.xml
@@ -10,9 +10,10 @@
         android:label="@string/app_name"
         android:theme="@style/Theme.Base.AppCompat.Light">
         <activity
-            android:name=".ui.activity.PlayersActivity"
+            android:name=".ui.activity.MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/Area">
+            android:theme="@style/Area"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
