--- a/kickers/app/src/main/AndroidManifest.xml
+++ b/kickers/app/src/main/AndroidManifest.xml
@@ -8,11 +8,10 @@
         android:name=".application.KickersApplication"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/Theme.Base.AppCompat.Light">
+        android:theme="@style/KickersTheme">
         <activity
             android:name=".ui.activity.MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/Area"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,7 +21,7 @@
         <activity
             android:name=".ui.activity.MatchActivity"
             android:screenOrientation="landscape"
-            android:theme="@style/Area">
+            android:theme="@style/KickersFullScreenTheme">
             <intent-filter>
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
